# prefix_filter

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  prefix_benchmarking.cpp
benchmark/fp_rate/: CMakeLists.txt  fp_rate_benchmark.cpp  fp_rate_benchmark.hpp  variable_size_filter_pack.hpp
include/: CMakeLists.txt
include/bloom/: bloom_filter.hpp
include/cuckoo/: cuckoo_filter.hpp
include/prefix/: CMakeLists.txt  bin.hpp  bin_t_choice.hpp  bin_types.hpp  prefix_filter.hpp  prefix_filter_factory.hpp
include/prefix/adapted/: bin.hpp  pocket_dictionary.hpp
include/prefix/interfaces/: i_bin.hpp  i_pocket_dictionary.hpp
include/prefix/non_simd/: CMakeLists.txt  bin.hpp  pocket_dictionary.hpp  prefix_filter.hpp  spare.hpp
include/prefix/simd/: pocket_dictionary.hpp
include/prefix/spare/: types.hpp
include/prefix/spare/bloom/: bloom_filter.hpp  bloom_filter_factory.hpp
include/prefix/spare/prefix_adapted/: bin.hpp  prefix_adapted.hpp
include/prefix/util/: hash_functions.hpp  masks.hpp
include/util/: hash_functions.hpp  masks.hpp
r_scripts/: dynamic_size_fp_rates.R  fp_rates.R  time_benchmarks.R
r_scripts/tables/: benchmark_adapted_insert.csv  benchmark_adapted_query_negative.csv  benchmark_adapted_query_positive.csv  benchmark_bloom_insert.csv  benchmark_bloom_query_negative.csv  benchmark_bloom_query_positive.csv  dynamic_size_fp_rates_adapted.csv  dynamic_size_fp_rates_simd.csv  fp_rates.csv
src/: CMakeLists.txt  main.cpp
src/prefix/: CMakeLists.txt
src/prefix/adapted/: CMakeLists.txt  bin.cpp
src/prefix/non_simd/: CMakeLists.txt  bin.cpp
src/prefix/spare/: CMakeLists.txt
src/prefix/spare/prefix_adapted/: CMakeLists.txt  bin.cpp
test/: CMakeLists.txt  run_tests.cpp
test/src/: CMakeLists.txt  pocket_dictionary_test.cpp
test/src/bloom/: CMakeLists.txt  bloom_test.cpp
test/src/prefix/: CMakeLists.txt  bin_test.cpp  pocket_dictionary_test.cpp  prefix_filter_test.cpp
test/src/prefix/adapted/: CMakeLists.txt  adapted_bin_test.cpp  pocket_dictionary_test.cpp
test/src/prefix/non_simd/: CMakeLists.txt  bin_test.cpp  pocket_dictionary_test.cpp
test/src/prefix/spare/: CMakeLists.txt
test/src/prefix/spare/bloom/: CMakeLists.txt  bloom_test.cpp
